# opporepomerge

./: .gitattributes  .gitignore  CONSOLIDATION_NOTES.md  README.md
script.oppo203.iso.external/: .coveragerc  .editorconfig  .gitattributes  .gitignore  AGENTS.md  AI_RESUME_HANDOFF.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  addon.xml  babel.cfg  conftest.py  default.py  mypy.ini  pyproject.toml  pytest.ini  reference.md  requirements-dev.txt  ruff.toml  service.py  web-references.md
script.oppo203.iso.external/.claude/commands/: done-for-the-day.md  release.md  resume.md
script.oppo203.iso.external/.github/: pull_request_template.md
script.oppo203.iso.external/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_fix.yml  feature_request.yml  hardware_validation_report.yml
script.oppo203.iso.external/.github/workflows/: ci.yml  claude-code-review.yml  configurator-ci.yml  package.yml
script.oppo203.iso.external/configurator/: .gitignore  BUILD.md  CONFIGURATOR_HANDOFF.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
script.oppo203.iso.external/configurator/src/: App.tsx  apply.test.ts  apply.ts  avr_db_consistency.test.ts  avrdb.test.ts  avrdb.ts  dashboard_chain.test.ts  dashboard_chain.ts  dashboard_snapshot.ts  dashboard_status.test.ts  dashboard_status.ts  dashboard_store.ts  dashboard_targets.test.ts  dashboard_targets.ts  diagnostics.test.ts  diagnostics.ts  generate.test.ts  generate.ts  i18n.test.ts  i18n.ts  installer-template.test.ts  ipc.test.ts  ipc.ts  mapping.test.ts  mapping.ts  merge.test.ts  merge.ts  nas_path.test.ts  nas_path.ts  oppo_status.test.ts  oppo_status.ts  players.test.ts  players.ts  playersdb.ts  presetsdb.test.ts  presetsdb.ts  probes.test.ts  probes.ts  reset.test.ts  reset.ts  (+26 more)
script.oppo203.iso.external/configurator/src-tauri/: .gitattributes  .gitignore  Cargo.toml  installer-hooks.nsh  installer.nsi  tauri.conf.json
script.oppo203.iso.external/docs/: ADDON_FUNCTIONAL_FLOW.md  BUILD_PLAN.md  HARDWARE_VALIDATION.md  MANUAL_VERIFICATION_CHECKLIST.md  NAMING_CONVENTIONS.md  OPPO_PROTOCOL_REFERENCE.md  README.md  XNOPPO_V3_ADOPTION_AND_DECISION_TREE_ENHANCEMENTS.md  sources.yaml  test-layout.md  testing-strategy.md
script.oppo203.iso.external/docs/ai-handoff/: AI_RESUME_GUIDE.md  Combined_AI_Handoff_and_Historical_Build_Reconstruction_v100_v2.9.10_BUILD15B.md  Combined_AI_Handoff_and_Historical_Build_Reconstruction_v101_v2.9.10_BUILD16.md  Combined_AI_Handoff_and_Historical_Build_Reconstruction_v102_v2.9.10_BUILD17.md  Combined_AI_Handoff_and_Historical_Build_Reconstruction_v103_v2.9.10_BUILD18.md  Combined_AI_Handoff_and_Historical_Build_Reconstruction_v104_v2.9.10_FINAL.md  Combined_AI_Handoff_and_Historical_Build_Reconstruction_v89_v2.9.10_BUILD6.md  Combined_AI_Handoff_and_Historical_Build_Reconstruction_v90_v2.9.10_BUILD7.md  Combined_AI_Handoff_and_Historical_Build_Reconstruction_v91_v2.9.10_BUILD8.md  Combined_AI_Handoff_and_Historical_Build_Reconstruction_v92_v2.9.10_BUILD9A.md  Combined_AI_Handoff_and_Historical_Build_Reconstruction_v93_v2.9.10_BUILD9B.md  Combined_AI_Handoff_and_Historical_Build_Reconstruction_v94_v2.9.10_BUILD10.md  Combined_AI_Handoff_and_Historical_Build_Reconstruction_v95_v2.9.10_BUILD11.md  Combined_AI_Handoff_and_Historical_Build_Reconstruction_v96_v2.9.10_BUILD12.md  Combined_AI_Handoff_and_Historical_Build_Reconstruction_v97_v2.9.10_BUILD13.md  Combined_AI_Handoff_and_Historical_Build_Reconstruction_v98_v2.9.10_BUILD14.md  Combined_AI_Handoff_and_Historical_Build_Reconstruction_v99_v2.9.10_BUILD15A.md  DEV_NOTES.md  INDEX.md  QUESTIONS_LOG.md  WIP_ARCHIVE.md
script.oppo203.iso.external/docs/audit/: README.md  addon_robustness_audit.md  addon_svm3_audit.md
script.oppo203.iso.external/docs/developer-guide/: README.md  ai-maintainer-rules.md  architecture.md  ci.md  code-quality.md  packaging.md  release-process.md  testing.md
script.oppo203.iso.external/docs/github-readiness/: AI_HANDOFF_G1_REPOSITORY_HYGIENE.md  AI_HANDOFF_G2_PUBLIC_DOCS.md  AI_HANDOFF_G3_DEVELOPER_DOCS.md  AI_HANDOFF_G4_GITHUB_TEMPLATES.md  AI_HANDOFF_G6_CI_HARDENING.md  AI_HANDOFF_G7_SAFE_FORMAT_LINT.md  AI_HANDOFF_G8_GITHUB_READY_FINAL.md  BUILD_NOTES_G1_REPOSITORY_HYGIENE.md  BUILD_NOTES_G2_PUBLIC_DOCS.md  README.md  (+41 more)
script.oppo203.iso.external/installer/: README.md  index.html  package-lock.json  package.json
script.oppo203.iso.external/resources/: settings.xml
script.oppo203.iso.external/scripts/: ci-local.sh  package_release.sh  release-addon-local.ps1  release-configurator-local.ps1  verify.sh
script.oppo203.iso.external/tests/: __init__.py  test_addon_signature.py  test_all.py  test_architecture_presets.py  test_autoscript_consistency.py  test_avr_db_backend_consistency.py  test_chinoppo_m9205_v1_split.py  test_ci_local_gate.py  test_clone_variants_split.py  test_coverage_99.py  test_coverage_gate_99_restore.py  test_coverage_hardening.py  test_dev_test_fast_loop.py  test_diag_probe_port.py  test_dolby_vision_capability.py  test_github_readiness_g5_tooling_config.py  test_github_readiness_g6_ci_hardening.py  test_github_readiness_g7_safe_format_cleanup.py  test_github_readiness_g8_final_packaging.py  test_hdmi_sequencing.py  test_hold_default.py  test_hold_robustness.py  test_kodi_stubs.py  test_oppo_bdmv_checkfolder.py  test_oppo_http_orchestration.py  test_oppo_http_pure.py  test_oppo_status_probe.py  test_playback_monitor_http.py  test_playback_presets_consistency.py  test_playback_session_modes.py  test_players_db_consistency.py  test_property_addon_robustness.py  test_property_http_hdmi.py  test_readme_current_release.py  test_release_scripts.py  test_session_sentinel_staleness.py  test_settings_xml_configurator_keys.py  test_superset_merge_build1.py  test_superset_merge_build10.py  test_superset_merge_build11.py  (+70 more)
script.oppo203.iso.external/tools/: audit_release.py  dev_test.py  i18n_extract.py  make_pot.py  package_installable_zip.py  render_docs.py  sync_version.py  test_layout.py  type_check.py
(+1104 files in other folders)
